# mcp-authchain

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_agent_api.py  run_mcp_server.py
agent-api/: Dockerfile  agent_setup.py  auth_middleware.py  main.py  requirements.txt
agent-api/routes/: chat.py  health.py
agent-api/service/: agent.py
agent-api/utils/: base.py  weather_client.py
commons/: config.py  firebase_auth.py  mcp_client.py  token_refresh.py  types.py
configs/: agent.yaml  settings.yaml
configs/tools/: weather.yaml
docs/: adding-tools.md  auth-chain.md  auth-middleware.md  creating-agents.md  oauth-dcr-setup.md
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts
frontend/src/components/: Chat.tsx  Login.tsx  WeatherCard.tsx
mcp-server/: Dockerfile  main.py  requirements.txt
mcp-server/auth/: __init__.py  azure_ad.py  firebase.py  jwt_generic.py
mcp-server/oauth/: __init__.py  endpoints.py  pkce.py  store.py  templates.py  token_service.py
mcp-server/tools/: __init__.py  base.py  weather.py
scripts/: start.bat  start.sh  stop.bat  test_mcp_server.py
